<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>example.GUI</groupId>
  <artifactId>gui-like-application</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <properties>
  <maven.compiler.source>13</maven.compiler.source>
  <maven.compiler.target>13</maven.compiler.target>
  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <dependencies>
  </dependencies>
  
  <build>
  	<plugins>
  		
  		<plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>main.GUIApplication</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
		<plugin>
			    <artifactId>maven-surefire-plugin</artifactId>
			    <version>3.0.0-M5</version>
			    <configuration>
			        <argLine>--enable-preview</argLine>
			    </configuration>
		</plugin>
		<plugin>
			    <artifactId>maven-failsafe-plugin</artifactId>
			    <version>3.0.0-M5</version>
			    <configuration>
			        <argLine>--enable-preview</argLine>
			    </configuration>
		</plugin>
	</plugins>	
  </build>
  
</project>